# weather-forecase

./: .gitignore  README.md  pyproject.toml  run_pipeline.sh
dbt/: .user.yml  dbt_project.yml  profiles.yml
docs/: design.md  ingestion.md  models.md  overall_design.md  training_and_prediction.md
src/: api.py  dashboard.py  ingest.py  monitor.py  predict.py  train.py
